# final-project

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: auth.py  bookings.py  deps.py  feedback.py  rooms.py  webhook.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  booking.py  feedback.py  occupancy.py  prediction.py  room.py  user.py
backend/app/schemas/: analytics.py  auth.py  booking.py  feedback.py  prediction.py  room.py
backend/app/services/: booking_service.py  dialogflow_service.py  email_service.py  prediction_service.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_booking_service.py  test_predictions.py
data/: hotel_data.csv
docs/: PRD.md  api_spec.md  architecture.md  data_analysis.md  dialogflow_setup.md  model_comparison.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminSidebar.tsx  Navbar.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts
models/: arima_model.pkl  model_metadata.json  prophet_model.pkl
notebooks/: 01_data_inspection.ipynb  02_preprocessing.ipynb  03_feature_engineering.ipynb  04_arima_model.ipynb  05_sarima_model.ipynb  06_prophet_model.ipynb  07_model_evaluation.ipynb  08_inference_pipeline.ipynb
(+25 files in other folders)
