[project]
name = "somerset-mirissa-beach-hotel"
version = "0.1.0"
description = "IHMS - Intelligent Hotel Management System (CIS6035 Final Year Project)"
requires-python = ">=3.12"

dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1.5",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "python-dateutil>=2.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]
